--- a/Dataset_1/Clustering_kmeans.ipynb
+++ b/Dataset_1/Clustering_kmeans.ipynb
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1b7e2912",
+   "id": "b7c05c51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "76e40dab",
+   "id": "3c1c0c12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cluster.head()"
+    "df.head()"
    ]
   },
   {
@@ -436,7 +436,7 @@
    "outputs": [],
    "source": [
     "# Visualize cluster 1\n",
-    "df_cluster[df_cluster['cluster'] == 0]"
+    "df[df_cluster['cluster'] == 0]"
    ]
   },
   {
@@ -447,16 +447,8 @@
    "outputs": [],
    "source": [
     "# Visualize cluster 2 \n",
-    "df_cluster[df_cluster['cluster'] == 1]"
+    "df[df_cluster['cluster'] == 1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f93636f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
