--- a/Dataset_2/Clustering_kmeans.ipynb
+++ b/Dataset_2/Clustering_kmeans.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d3849409",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "4    unknown         unknown  unknown  unknown      H1N1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "727a5405",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "(1485, 12)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ec0414df",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0e9b879a",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3b9bb619",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>23.833692</td>\n",
-       "      <td>3.552714e-14</td>\n",
+       "      <td>1.421085e-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -315,7 +315,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>23.833692</td>\n",
-       "      <td>3.552714e-14</td>\n",
+       "      <td>1.421085e-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -349,7 +349,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>23.833692</td>\n",
-       "      <td>3.552714e-14</td>\n",
+       "      <td>1.421085e-14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -372,13 +372,13 @@
        "\n",
        "          cen_y  \n",
        "0  3.806746e+01  \n",
-       "1  3.552714e-14  \n",
-       "2  3.552714e-14  \n",
+       "1  1.421085e-14  \n",
+       "2  1.421085e-14  \n",
        "3  3.806746e+01  \n",
-       "4  3.552714e-14  "
+       "4  1.421085e-14  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
     "# plt.show()\n",
     "\n",
     "# plt.scatter(df_cluster[y_kmeans==0, components[:,0]], df_cluster[y_kmeans==0, components[:,1]], s=100, c='red', label ='Cluster 1')\n",
-    "# plt.scatter(df_cluster[y_kmeans==1, components[:,0]], df_cluster[y_kmeans==1, components[:,1]], s=100, c='blue', label ='Cluster 2')\n",
+    "# plt.scatter(df_cluster[y_kmeans== 1, components[:,0]], df_cluster[y_kmeans==1, components[:,1]], s=100, c='blue', label ='Cluster 2')\n",
     "# plt.scatter(kmeans.cluster_centers_[:, 0], kmeans.cluster_centers_[:, 1], s=300, c='yellow', label = 'Centroids')\n",
     "# plt.show()\n",
     "\n",
@@ -1162,7 +1162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1176,7 +1176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
