tidying the code

--- a/Dataset_1/AGGLO.ipynb
+++ b/Dataset_1/AGGLO.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5628323a",
+   "id": "fb84e237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fc6822c7",
+   "id": "851b1838",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "be846ab3",
+   "id": "b5dab7cf",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "037df861",
+   "id": "d01e202a",
    "metadata": {},
    "outputs": [
     {
@@ -356,6 +356,7 @@
     }
    ],
    "source": [
+    "#function to create dendrogram to find optimal number of cluster\n",
     "def dendrogram(df,linkage):\n",
     "    dendrogram = sch.dendrogram(sch.linkage(df, method  = linkage))\n",
     "    plt.title('Dendrogram')\n",
@@ -369,10 +370,11 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f7ae253d",
+   "id": "1e53bcbf",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#function to perform agglomerative clustering\n",
     "def agglomerative(df,n,metric,linkage):\n",
     "    agglomerative_clustering = AgglomerativeClustering(n_clusters = n, affinity = metric, linkage = linkage)\n",
     "    df[\"cluster\"] = agglomerative_clustering.fit_predict(df)\n",
@@ -382,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "8d88ca4f",
+   "id": "c7a4964b",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "86527351",
+   "id": "583a519d",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ea4b73f9",
+   "id": "973ff573",
    "metadata": {},
    "outputs": [
     {
