--- a/Dataset_1/OPTICS.ipynb
+++ b/Dataset_1/OPTICS.ipynb
@@ -426,11 +426,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2ab0db14",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>anaemia</th>\n",
+       "      <th>creatinine_phosphokinase</th>\n",
+       "      <th>diabetes</th>\n",
+       "      <th>ejection_fraction</th>\n",
+       "      <th>high_blood_pressure</th>\n",
+       "      <th>platelets</th>\n",
+       "      <th>serum_creatinine</th>\n",
+       "      <th>serum_sodium</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>smoking</th>\n",
+       "      <th>time</th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>75.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>582</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>265000.00</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>130</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1641.969406</td>\n",
+       "      <td>-0.145905</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7861</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>263358.03</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>136</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.766518</td>\n",
+       "      <td>7279.254974</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>65.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>146</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>162000.00</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>129</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-101358.133289</td>\n",
+       "      <td>-411.138654</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>111</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>210000.00</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>137</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-53358.143086</td>\n",
+       "      <td>-457.772091</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>65.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>160</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>327000.00</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>116</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>63641.865204</td>\n",
+       "      <td>-437.190782</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    age  anaemia  creatinine_phosphokinase  diabetes  ejection_fraction  \\\n",
+       "0  75.0        0                       582         0                 20   \n",
+       "1  55.0        0                      7861         0                 38   \n",
+       "2  65.0        0                       146         0                 20   \n",
+       "3  50.0        1                       111         0                 20   \n",
+       "4  65.0        1                       160         1                 20   \n",
+       "\n",
+       "   high_blood_pressure  platelets  serum_creatinine  serum_sodium  sex  \\\n",
+       "0                    1  265000.00               1.9           130    1   \n",
+       "1                    0  263358.03               1.1           136    1   \n",
+       "2                    0  162000.00               1.3           129    1   \n",
+       "3                    0  210000.00               1.9           137    1   \n",
+       "4                    0  327000.00               2.7           116    0   \n",
+       "\n",
+       "   smoking  time            PC1          PC2  cluster  \n",
+       "0        0     4    1641.969406    -0.145905        0  \n",
+       "1        0     6       1.766518  7279.254974        0  \n",
+       "2        1     7 -101358.133289  -411.138654       -1  \n",
+       "3        0     7  -53358.143086  -457.772091        1  \n",
+       "4        0     8   63641.865204  -437.190782       -1  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cluster_1.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -489,7 +652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
