--- a/Dataset_1/Shi and Malik's algorithms.ipynb
+++ b/Dataset_1/Shi and Malik's algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "dbd841d0",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "7e3a2e06",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "4        0     8  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "93966de1",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "7ec76105",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "3b9cbef6",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "        347005.00688411, 255009.63747286,      0.        ]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "1c4d9488",
    "metadata": {},
    "outputs": [],
@@ -264,30 +264,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "ce561704",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Getting adjacency matrix for all the points in csv\n",
     "def getAjacency(matrix):\n",
-    "    adacency_matrix = []\n",
-    "    for row in matrix_dist:\n",
-    "        x = []\n",
-    "        for point in row:\n",
-    "            x.append(equation(point))\n",
-    "            adacency_matrix.append(x)\n",
-    "    np.array(adacency_matrix)\n",
+    "    adacency_matrix = equation(matrix)\n",
+    "\n",
     "    \n",
     "    return adacency_matrix "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "b8ed5808",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 1. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 1. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 1. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 1. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "adacency_matrix= getAjacency(matrix_dist)\n",
     "print(adacency_matrix)\n"
