--- a/Dataset_1/Shi and Malik's algorithms.ipynb
+++ b/Dataset_1/Shi and Malik's algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "dbd841d0",
    "metadata": {},
    "outputs": [],
@@ -19,12 +19,13 @@
     "from sklearn.cluster import KMeans\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=np.VisibleDeprecationWarning) \n",
+    "from scipy.spatial.distance import pdist\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "7e3a2e06",
    "metadata": {},
    "outputs": [
@@ -59,8 +60,6 @@
        "      <th>serum_creatinine</th>\n",
        "      <th>serum_sodium</th>\n",
        "      <th>sex</th>\n",
-       "      <th>smoking</th>\n",
-       "      <th>time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -76,8 +75,6 @@
        "      <td>1.9</td>\n",
        "      <td>130</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -91,8 +88,6 @@
        "      <td>1.1</td>\n",
        "      <td>136</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -106,8 +101,6 @@
        "      <td>1.3</td>\n",
        "      <td>129</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -121,8 +114,6 @@
        "      <td>1.9</td>\n",
        "      <td>137</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -136,8 +127,6 @@
        "      <td>2.7</td>\n",
        "      <td>116</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -151,22 +140,15 @@
        "3  50.0        1                       111         0                 20   \n",
        "4  65.0        1                       160         1                 20   \n",
        "\n",
-       "   high_blood_pressure  platelets  serum_creatinine  serum_sodium  sex  \\\n",
-       "0                    1  265000.00               1.9           130    1   \n",
-       "1                    0  263358.03               1.1           136    1   \n",
-       "2                    0  162000.00               1.3           129    1   \n",
-       "3                    0  210000.00               1.9           137    1   \n",
-       "4                    0  327000.00               2.7           116    0   \n",
-       "\n",
-       "   smoking  time  \n",
-       "0        0     4  \n",
-       "1        0     6  \n",
-       "2        1     7  \n",
-       "3        0     7  \n",
-       "4        0     8  "
+       "   high_blood_pressure  platelets  serum_creatinine  serum_sodium  sex  \n",
+       "0                    1  265000.00               1.9           130    1  \n",
+       "1                    0  263358.03               1.1           136    1  \n",
+       "2                    0  162000.00               1.3           129    1  \n",
+       "3                    0  210000.00               1.9           137    1  \n",
+       "4                    0  327000.00               2.7           116    0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,13 +156,13 @@
    "source": [
     "  # Uploading the files\n",
     "df = pd.read_csv(\"HeartFailure.csv\")\n",
-    "df_cluster = df.iloc[:,1:13]\n",
+    "df_cluster = df.iloc[:,1:11]\n",
     "df_cluster.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "93966de1",
    "metadata": {},
    "outputs": [],
@@ -200,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "7ec76105",
    "metadata": {},
    "outputs": [],
@@ -215,29 +197,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "3b9cbef6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[     0.        ,   7461.94827916, 103000.92333741, ...,\n",
-       "        477002.37119768, 125013.7195001 , 130000.88170889],\n",
-       "       [  7461.94827916,      0.        , 101651.22697499, ...,\n",
-       "        478677.19981275, 123478.57896239, 131865.22819429],\n",
-       "       [103000.92333741, 101651.22697499,      0.        , ...,\n",
-       "        580003.22319902,  22118.19755337, 233000.17313961],\n",
+       "array([[     0.        ,   7461.94801114, 103000.92328887, ...,\n",
+       "        477002.29250205, 125013.41482517, 130000.5780106 ],\n",
+       "       [  7461.94801114,      0.        , 101651.22696515, ...,\n",
+       "        478677.1225331 , 123478.27495382, 131864.93303654],\n",
+       "       [103000.92328887, 101651.22696515,      0.        , ...,\n",
+       "        580003.1598873 ,  22116.51270002, 233000.00729418],\n",
        "       ...,\n",
-       "       [477002.37119768, 478677.19981275, 580003.22319902, ...,\n",
-       "             0.        , 602000.10390727, 347005.00688411],\n",
-       "       [125013.7195001 , 123478.57896239,  22118.19755337, ...,\n",
-       "        602000.10390727,      0.        , 255009.63747286],\n",
-       "       [130000.88170889, 131865.22819429, 233000.17313961, ...,\n",
-       "        347005.00688411, 255009.63747286,      0.        ]])"
+       "       [477002.29250205, 478677.1225331 , 580003.1598873 , ...,\n",
+       "             0.        , 602000.10390311, 347005.00681206],\n",
+       "       [125013.41482517, 123478.27495382,  22116.51270002, ...,\n",
+       "        602000.10390311,      0.        , 255009.63742384],\n",
+       "       [130000.5780106 , 131864.93303654, 233000.00729418, ...,\n",
+       "        347005.00681206, 255009.63742384,      0.        ]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,62 +231,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "1c4d9488",
    "metadata": {},
    "outputs": [],
    "source": [
     "#equation fro adjacency matrix\n",
-    "def equation(point):\n",
-    "    n = 0.1\n",
-    "    function = np.exp(-((point ** 2) / (2. * n ** 2)))\n",
-    "    return function \n",
-    "    "
+    "def equation(df, sigma, distance):\n",
+    "    dim = df.shape[0]\n",
+    "    A = np.zeros([dim, dim])\n",
+    "    dist = iter(pdist(df, metric=distance))\n",
+    "#     matrix_dist = dist.pairwise(df.to_numpy())\n",
+    "    for i in range(dim):\n",
+    "        for j in range(i+1, dim):  \n",
+    "            d = np.exp(-next(dist) ** 2) / (2. * sigma ** 2)\n",
+    "            A[i,j] = d\n",
+    "            A[j,i] = d\n",
+    "    return A\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "ce561704",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Getting adjacency matrix for all the points in csv\n",
-    "def getAjacency(matrix):\n",
-    "    adacency_matrix = equation(matrix)\n",
-    "\n",
-    "    \n",
-    "    return adacency_matrix "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "b8ed5808",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 1. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 1. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 1. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 1. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 1.]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "adacency_matrix= getAjacency(matrix_dist)\n",
-    "print(adacency_matrix)\n"
+    "adjacency_matrix = equation(df_cluster, 0.3, 'euclidean')\n",
+    "# adacency_matrix= getAjacency(df_cluster)\n",
+    "adjacency_matrix\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d61ff8d7",
    "metadata": {},
    "outputs": [],
